made changes to champion name lookup dictionary

--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -7514,6 +7514,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aurelionsol\n",
+      "jarvaniv\n",
+      "leesin\n",
+      "monkeyking\n",
+      "masteryi\n",
+      "missfortune\n",
+      "tahmkench\n",
+      "twistedfate\n",
+      "xinzhao\n"
+     ]
+    }
+   ],
+   "source": [
+    "misspelled = [('aurelionsol','aurelion sol'),('jarvaniv','jarvan iv'),('leesin','lee sin'),('monkeyking','wukong'),('masteryi','master yi'),('missfortune','miss fortune'),('tahmkench','tahm kench'),('twistedfate','twisted fate'),('xinzhao','xin zhao')]\n",
+    "for i in misspelled:\n",
+    "    print(i[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{266: 'Aatrox',\n",
+       " 103: 'Ahri',\n",
+       " 84: 'Akali',\n",
+       " 12: 'Alistar',\n",
+       " 32: 'Amumu',\n",
+       " 34: 'Anivia',\n",
+       " 1: 'Annie',\n",
+       " 523: 'Aphelios',\n",
+       " 22: 'Ashe',\n",
+       " 136: 'AurelionSol',\n",
+       " 268: 'Azir',\n",
+       " 432: 'Bard',\n",
+       " 53: 'Blitzcrank',\n",
+       " 63: 'Brand',\n",
+       " 201: 'Braum',\n",
+       " 51: 'Caitlyn',\n",
+       " 164: 'Camille',\n",
+       " 69: 'Cassiopeia',\n",
+       " 31: 'Chogath',\n",
+       " 42: 'Corki',\n",
+       " 122: 'Darius',\n",
+       " 131: 'Diana',\n",
+       " 119: 'Draven',\n",
+       " 36: 'DrMundo',\n",
+       " 245: 'Ekko',\n",
+       " 60: 'Elise',\n",
+       " 28: 'Evelynn',\n",
+       " 81: 'Ezreal',\n",
+       " 9: 'Fiddlesticks',\n",
+       " 114: 'Fiora',\n",
+       " 105: 'Fizz',\n",
+       " 3: 'Galio',\n",
+       " 41: 'Gangplank',\n",
+       " 86: 'Garen',\n",
+       " 150: 'Gnar',\n",
+       " 79: 'Gragas',\n",
+       " 104: 'Graves',\n",
+       " 887: 'Gwen',\n",
+       " 120: 'Hecarim',\n",
+       " 74: 'Heimerdinger',\n",
+       " 420: 'Illaoi',\n",
+       " 39: 'Irelia',\n",
+       " 427: 'Ivern',\n",
+       " 40: 'Janna',\n",
+       " 59: 'JarvanIV',\n",
+       " 24: 'Jax',\n",
+       " 126: 'Jayce',\n",
+       " 202: 'Jhin',\n",
+       " 222: 'Jinx',\n",
+       " 145: 'Kaisa',\n",
+       " 429: 'Kalista',\n",
+       " 43: 'Karma',\n",
+       " 30: 'Karthus',\n",
+       " 38: 'Kassadin',\n",
+       " 55: 'Katarina',\n",
+       " 10: 'Kayle',\n",
+       " 141: 'Kayn',\n",
+       " 85: 'Kennen',\n",
+       " 121: 'Khazix',\n",
+       " 203: 'Kindred',\n",
+       " 240: 'Kled',\n",
+       " 96: 'KogMaw',\n",
+       " 7: 'Leblanc',\n",
+       " 64: 'LeeSin',\n",
+       " 89: 'Leona',\n",
+       " 876: 'Lillia',\n",
+       " 127: 'Lissandra',\n",
+       " 236: 'Lucian',\n",
+       " 117: 'Lulu',\n",
+       " 99: 'Lux',\n",
+       " 54: 'Malphite',\n",
+       " 90: 'Malzahar',\n",
+       " 57: 'Maokai',\n",
+       " 11: 'MasterYi',\n",
+       " 21: 'MissFortune',\n",
+       " 62: 'MonkeyKing',\n",
+       " 82: 'Mordekaiser',\n",
+       " 25: 'Morgana',\n",
+       " 267: 'Nami',\n",
+       " 75: 'Nasus',\n",
+       " 111: 'Nautilus',\n",
+       " 518: 'Neeko',\n",
+       " 76: 'Nidalee',\n",
+       " 56: 'Nocturne',\n",
+       " 20: 'Nunu',\n",
+       " 2: 'Olaf',\n",
+       " 61: 'Orianna',\n",
+       " 516: 'Ornn',\n",
+       " 80: 'Pantheon',\n",
+       " 78: 'Poppy',\n",
+       " 555: 'Pyke',\n",
+       " 246: 'Qiyana',\n",
+       " 133: 'Quinn',\n",
+       " 497: 'Rakan',\n",
+       " 33: 'Rammus',\n",
+       " 421: 'RekSai',\n",
+       " 526: 'Rell',\n",
+       " 58: 'Renekton',\n",
+       " 107: 'Rengar',\n",
+       " 92: 'Riven',\n",
+       " 68: 'Rumble',\n",
+       " 13: 'Ryze',\n",
+       " 360: 'Samira',\n",
+       " 113: 'Sejuani',\n",
+       " 235: 'Senna',\n",
+       " 147: 'Seraphine',\n",
+       " 875: 'Sett',\n",
+       " 35: 'Shaco',\n",
+       " 98: 'Shen',\n",
+       " 102: 'Shyvana',\n",
+       " 27: 'Singed',\n",
+       " 14: 'Sion',\n",
+       " 15: 'Sivir',\n",
+       " 72: 'Skarner',\n",
+       " 37: 'Sona',\n",
+       " 16: 'Soraka',\n",
+       " 50: 'Swain',\n",
+       " 517: 'Sylas',\n",
+       " 134: 'Syndra',\n",
+       " 223: 'TahmKench',\n",
+       " 163: 'Taliyah',\n",
+       " 91: 'Talon',\n",
+       " 44: 'Taric',\n",
+       " 17: 'Teemo',\n",
+       " 412: 'Thresh',\n",
+       " 18: 'Tristana',\n",
+       " 48: 'Trundle',\n",
+       " 23: 'Tryndamere',\n",
+       " 4: 'TwistedFate',\n",
+       " 29: 'Twitch',\n",
+       " 77: 'Udyr',\n",
+       " 6: 'Urgot',\n",
+       " 110: 'Varus',\n",
+       " 67: 'Vayne',\n",
+       " 45: 'Veigar',\n",
+       " 161: 'Velkoz',\n",
+       " 254: 'Vi',\n",
+       " 234: 'Viego',\n",
+       " 112: 'Viktor',\n",
+       " 8: 'Vladimir',\n",
+       " 106: 'Volibear',\n",
+       " 19: 'Warwick',\n",
+       " 498: 'Xayah',\n",
+       " 101: 'Xerath',\n",
+       " 5: 'XinZhao',\n",
+       " 157: 'Yasuo',\n",
+       " 777: 'Yone',\n",
+       " 83: 'Yorick',\n",
+       " 350: 'Yuumi',\n",
+       " 154: 'Zac',\n",
+       " 238: 'Zed',\n",
+       " 115: 'Ziggs',\n",
+       " 26: 'Zilean',\n",
+       " 142: 'Zoe',\n",
+       " 143: 'Zyra'}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION_ID_TO_NAME"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
