added /championinfo and /championlore

--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -7261,204 +7261,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get('http://ddragon.leagueoflegends.com/cdn/11.12.1/data/en_US/champion/Samira.json')"
+    "r = requests.get('http://ddragon.leagueoflegends.com/cdn/11.12.1/data/en_US/champion/Nasus.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'SamiraQ',\n",
-       "  'name': 'Flair',\n",
-       "  'description': 'Samira fires a shot or swings her sword, dealing damage. If cast during Wild Rush, strike all enemies in her path upon completion.',\n",
-       "  'tooltip': 'Samira fires a shot, dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> to the first enemy hit.<br /><br />If this Ability is cast towards an enemy in melee range, Samira will instead slash with her sword, dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage>. ',\n",
-       "  'leveltip': {'label': ['Damage', 'Cooldown', 'Percent of Attack Damage'],\n",
-       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
-       "    '{{ cooldown }} -> {{ cooldownNL }}',\n",
-       "    '{{ qadratio*100.000000 }}% -> {{ qadrationl*100.000000 }}%']},\n",
-       "  'maxrank': 5,\n",
-       "  'cooldown': [6, 5, 4, 3, 2],\n",
-       "  'cooldownBurn': '6/5/4/3/2',\n",
-       "  'cost': [30, 30, 30, 30, 30],\n",
-       "  'costBurn': '30',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': ' {{ abilityresourcename }}',\n",
-       "  'maxammo': '-1',\n",
-       "  'range': [950, 950, 950, 950, 950],\n",
-       "  'rangeBurn': '950',\n",
-       "  'image': {'full': 'SamiraQ.png',\n",
-       "   'sprite': 'spell10.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 96,\n",
-       "   'y': 96,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
-       " {'id': 'SamiraW',\n",
-       "  'name': 'Blade Whirl',\n",
-       "  'description': 'Samira slashes around her, damaging enemies and destroying enemy missiles.',\n",
-       "  'tooltip': 'Samira slashes around her for {{ slashduration }} seconds, damaging enemies twice for <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> each and destroying any enemy missiles that enter the area.<br /><br />',\n",
-       "  'leveltip': {'label': ['Damage', 'Cooldown'],\n",
-       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
-       "    '{{ cooldown }} -> {{ cooldownNL }}']},\n",
-       "  'maxrank': 5,\n",
-       "  'cooldown': [30, 28, 26, 24, 22],\n",
-       "  'cooldownBurn': '30/28/26/24/22',\n",
-       "  'cost': [60, 60, 60, 60, 60],\n",
-       "  'costBurn': '60',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': ' {{ abilityresourcename }}',\n",
-       "  'maxammo': '-1',\n",
-       "  'range': [325, 325, 325, 325, 325],\n",
-       "  'rangeBurn': '325',\n",
-       "  'image': {'full': 'SamiraW.png',\n",
-       "   'sprite': 'spell10.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 144,\n",
-       "   'y': 96,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
-       " {'id': 'SamiraE',\n",
-       "  'name': 'Wild Rush',\n",
-       "  'description': \"Samira dashes through an enemy (including structures), slashing enemies she passes through and gaining Attack Speed. Killing an enemy champion refreshes this ability's cooldown.\",\n",
-       "  'tooltip': \"Samira dashes through an enemy (including structures), slashing enemies she passes through dealing <magicDamage>{{ dashdamage }} magic damage</magicDamage> and gaining <attackSpeed>{{ bonusattackspeed*100 }}% Attack Speed</attackSpeed> for 3 seconds. <br /><br />If an enemy champion is killed within 3 seconds of Samira damaging them, Wild Rush's cooldown is reset.\",\n",
-       "  'leveltip': {'label': ['Damage', 'Cooldown', 'Attack Speed'],\n",
-       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
-       "    '{{ cooldown }} -> {{ cooldownNL }}',\n",
-       "    '{{ bonusattackspeed*100.000000 }}% -> {{ bonusattackspeednl*100.000000 }}%']},\n",
-       "  'maxrank': 5,\n",
-       "  'cooldown': [20, 18, 16, 14, 12],\n",
-       "  'cooldownBurn': '20/18/16/14/12',\n",
-       "  'cost': [40, 40, 40, 40, 40],\n",
-       "  'costBurn': '40',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0],\n",
-       "   [0, 0, 0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': ' {{ abilityresourcename }}',\n",
-       "  'maxammo': '-1',\n",
-       "  'range': [600, 600, 600, 600, 600],\n",
-       "  'rangeBurn': '600',\n",
-       "  'image': {'full': 'SamiraE.png',\n",
-       "   'sprite': 'spell10.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 192,\n",
-       "   'y': 96,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': '{{ cost }} {{ abilityresourcename }}'},\n",
-       " {'id': 'SamiraR',\n",
-       "  'name': 'Inferno Trigger',\n",
-       "  'description': 'Samira unleashes a torrent of shots from her weapons, wildly shooting all enemies surrounding her.',\n",
-       "  'tooltip': 'Samira can only use this Ability if her current <keywordMajor>Style</keywordMajor> rating is S.<br /><br />Samira unleashes a torrent of shots from her weapons, wildly shooting all enemies surrounding her 10 times over 2 seconds, each shot dealing <physicalDamage>{{ damagecalc }} physical damage</physicalDamage> and applying lifesteal at {{ lifestealmod*100 }}% effectiveness. Each shot can also critically strike.<br /><br />',\n",
-       "  'leveltip': {'label': ['Damage', '@AbilityResourceName@ Cost'],\n",
-       "   'effect': ['{{ basedamage }} -> {{ basedamageNL }}',\n",
-       "    '{{ cost }} -> {{ costNL }}']},\n",
-       "  'maxrank': 3,\n",
-       "  'cooldown': [8, 8, 8],\n",
-       "  'cooldownBurn': '8',\n",
-       "  'cost': [100, 50, 0],\n",
-       "  'costBurn': '100/50/0',\n",
-       "  'datavalues': {},\n",
-       "  'effect': [None,\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0],\n",
-       "   [0, 0, 0]],\n",
-       "  'effectBurn': [None, '0', '0', '0', '0', '0', '0', '0', '0', '0', '0'],\n",
-       "  'vars': [],\n",
-       "  'costType': ' {{ abilityresourcename }}',\n",
-       "  'maxammo': '-1',\n",
-       "  'range': [600, 600, 600],\n",
-       "  'rangeBurn': '600',\n",
-       "  'image': {'full': 'SamiraR.png',\n",
-       "   'sprite': 'spell10.png',\n",
-       "   'group': 'spell',\n",
-       "   'x': 240,\n",
-       "   'y': 96,\n",
-       "   'w': 48,\n",
-       "   'h': 48},\n",
-       "  'resource': '{{ cost }} {{ abilityresourcename }}'}]"
+       "{'id': 'NasusQ',\n",
+       " 'name': 'Siphoning Strike',\n",
+       " 'description': 'Nasus strikes his foe, dealing damage and increasing the power of his future Siphoning Strikes if he slays his target.',\n",
+       " 'tooltip': \"Nasus' next Attack deals <physicalDamage>{{ totaldamage }} physical damage</physicalDamage>. Killing an enemy with this Attack permanently increases its damage by {{ e2 }}, increased to {{ e4 }} against champions, large minions and large jungle monsters.\",\n",
+       " 'leveltip': {'label': ['Base Damage', 'Cooldown'],\n",
+       "  'effect': ['{{ e1 }} -> {{ e1NL }}', '{{ cooldown }} -> {{ cooldownNL }}']},\n",
+       " 'maxrank': 5,\n",
+       " 'cooldown': [7.5, 6.5, 5.5, 4.5, 3.5],\n",
+       " 'cooldownBurn': '7.5/6.5/5.5/4.5/3.5',\n",
+       " 'cost': [20, 20, 20, 20, 20],\n",
+       " 'costBurn': '20',\n",
+       " 'datavalues': {},\n",
+       " 'effect': [None,\n",
+       "  [30, 50, 70, 90, 110],\n",
+       "  [3, 3, 3, 3, 3],\n",
+       "  [25, 25, 25, 25, 25],\n",
+       "  [12, 12, 12, 12, 12],\n",
+       "  [0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 0]],\n",
+       " 'effectBurn': [None,\n",
+       "  '30/50/70/90/110',\n",
+       "  '3',\n",
+       "  '25',\n",
+       "  '12',\n",
+       "  '0',\n",
+       "  '0',\n",
+       "  '0',\n",
+       "  '0',\n",
+       "  '0',\n",
+       "  '0'],\n",
+       " 'vars': [],\n",
+       " 'costType': ' {{ abilityresourcename }}',\n",
+       " 'maxammo': '-1',\n",
+       " 'range': [300, 300, 300, 300, 300],\n",
+       " 'rangeBurn': '300',\n",
+       " 'image': {'full': 'NasusQ.png',\n",
+       "  'sprite': 'spell8.png',\n",
+       "  'group': 'spell',\n",
+       "  'x': 0,\n",
+       "  'y': 48,\n",
+       "  'w': 48,\n",
+       "  'h': 48},\n",
+       " 'resource': '{{ cost }} {{ abilityresourcename }}'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.json()['data']['Samira']['spells']"
+    "r.json()['data']['Nasus']['spells'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{'name': 'Soul Eater',\n",
+       " 'description': \"Nasus drains his foe's spiritual energy, giving him bonus Life Steal.\",\n",
+       " 'image': {'full': 'Nasus_Passive.png',\n",
+       "  'sprite': 'passive2.png',\n",
+       "  'group': 'passive',\n",
+       "  'x': 432,\n",
+       "  'y': 48,\n",
+       "  'w': 48,\n",
+       "  'h': 48}}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.json()['data']['Samira']['allytips']"
+    "r.json()['data']['Nasus']['passive']"
    ]
   },
   {
@@ -7478,247 +7379,15 @@
     }
    ],
    "source": [
-    "r.json()['data']['Samira']['enemytips']"
+    "# Nasus, the xyz   #IMAGE\n",
+    "# Description\n",
+    "# Passive\n",
+    "# Q - Siphoning Strike\n",
+    "## .....\n",
+    "# W - \n",
+    "# E - \n",
+    "# R - \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aatrox   IMAGE\n",
-    "# The Darkin Blade\n",
-    "#"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "360"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CHAMPION_NAME_TO_ID['samira']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aurelionsol\n",
-      "jarvaniv\n",
-      "leesin\n",
-      "monkeyking\n",
-      "masteryi\n",
-      "missfortune\n",
-      "tahmkench\n",
-      "twistedfate\n",
-      "xinzhao\n"
-     ]
-    }
-   ],
-   "source": [
-    "misspelled = [('aurelionsol','aurelion sol'),('jarvaniv','jarvan iv'),('leesin','lee sin'),('monkeyking','wukong'),('masteryi','master yi'),('missfortune','miss fortune'),('tahmkench','tahm kench'),('twistedfate','twisted fate'),('xinzhao','xin zhao')]\n",
-    "for i in misspelled:\n",
-    "    print(i[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{266: 'Aatrox',\n",
-       " 103: 'Ahri',\n",
-       " 84: 'Akali',\n",
-       " 12: 'Alistar',\n",
-       " 32: 'Amumu',\n",
-       " 34: 'Anivia',\n",
-       " 1: 'Annie',\n",
-       " 523: 'Aphelios',\n",
-       " 22: 'Ashe',\n",
-       " 136: 'AurelionSol',\n",
-       " 268: 'Azir',\n",
-       " 432: 'Bard',\n",
-       " 53: 'Blitzcrank',\n",
-       " 63: 'Brand',\n",
-       " 201: 'Braum',\n",
-       " 51: 'Caitlyn',\n",
-       " 164: 'Camille',\n",
-       " 69: 'Cassiopeia',\n",
-       " 31: 'Chogath',\n",
-       " 42: 'Corki',\n",
-       " 122: 'Darius',\n",
-       " 131: 'Diana',\n",
-       " 119: 'Draven',\n",
-       " 36: 'DrMundo',\n",
-       " 245: 'Ekko',\n",
-       " 60: 'Elise',\n",
-       " 28: 'Evelynn',\n",
-       " 81: 'Ezreal',\n",
-       " 9: 'Fiddlesticks',\n",
-       " 114: 'Fiora',\n",
-       " 105: 'Fizz',\n",
-       " 3: 'Galio',\n",
-       " 41: 'Gangplank',\n",
-       " 86: 'Garen',\n",
-       " 150: 'Gnar',\n",
-       " 79: 'Gragas',\n",
-       " 104: 'Graves',\n",
-       " 887: 'Gwen',\n",
-       " 120: 'Hecarim',\n",
-       " 74: 'Heimerdinger',\n",
-       " 420: 'Illaoi',\n",
-       " 39: 'Irelia',\n",
-       " 427: 'Ivern',\n",
-       " 40: 'Janna',\n",
-       " 59: 'JarvanIV',\n",
-       " 24: 'Jax',\n",
-       " 126: 'Jayce',\n",
-       " 202: 'Jhin',\n",
-       " 222: 'Jinx',\n",
-       " 145: 'Kaisa',\n",
-       " 429: 'Kalista',\n",
-       " 43: 'Karma',\n",
-       " 30: 'Karthus',\n",
-       " 38: 'Kassadin',\n",
-       " 55: 'Katarina',\n",
-       " 10: 'Kayle',\n",
-       " 141: 'Kayn',\n",
-       " 85: 'Kennen',\n",
-       " 121: 'Khazix',\n",
-       " 203: 'Kindred',\n",
-       " 240: 'Kled',\n",
-       " 96: 'KogMaw',\n",
-       " 7: 'Leblanc',\n",
-       " 64: 'LeeSin',\n",
-       " 89: 'Leona',\n",
-       " 876: 'Lillia',\n",
-       " 127: 'Lissandra',\n",
-       " 236: 'Lucian',\n",
-       " 117: 'Lulu',\n",
-       " 99: 'Lux',\n",
-       " 54: 'Malphite',\n",
-       " 90: 'Malzahar',\n",
-       " 57: 'Maokai',\n",
-       " 11: 'MasterYi',\n",
-       " 21: 'MissFortune',\n",
-       " 62: 'MonkeyKing',\n",
-       " 82: 'Mordekaiser',\n",
-       " 25: 'Morgana',\n",
-       " 267: 'Nami',\n",
-       " 75: 'Nasus',\n",
-       " 111: 'Nautilus',\n",
-       " 518: 'Neeko',\n",
-       " 76: 'Nidalee',\n",
-       " 56: 'Nocturne',\n",
-       " 20: 'Nunu',\n",
-       " 2: 'Olaf',\n",
-       " 61: 'Orianna',\n",
-       " 516: 'Ornn',\n",
-       " 80: 'Pantheon',\n",
-       " 78: 'Poppy',\n",
-       " 555: 'Pyke',\n",
-       " 246: 'Qiyana',\n",
-       " 133: 'Quinn',\n",
-       " 497: 'Rakan',\n",
-       " 33: 'Rammus',\n",
-       " 421: 'RekSai',\n",
-       " 526: 'Rell',\n",
-       " 58: 'Renekton',\n",
-       " 107: 'Rengar',\n",
-       " 92: 'Riven',\n",
-       " 68: 'Rumble',\n",
-       " 13: 'Ryze',\n",
-       " 360: 'Samira',\n",
-       " 113: 'Sejuani',\n",
-       " 235: 'Senna',\n",
-       " 147: 'Seraphine',\n",
-       " 875: 'Sett',\n",
-       " 35: 'Shaco',\n",
-       " 98: 'Shen',\n",
-       " 102: 'Shyvana',\n",
-       " 27: 'Singed',\n",
-       " 14: 'Sion',\n",
-       " 15: 'Sivir',\n",
-       " 72: 'Skarner',\n",
-       " 37: 'Sona',\n",
-       " 16: 'Soraka',\n",
-       " 50: 'Swain',\n",
-       " 517: 'Sylas',\n",
-       " 134: 'Syndra',\n",
-       " 223: 'TahmKench',\n",
-       " 163: 'Taliyah',\n",
-       " 91: 'Talon',\n",
-       " 44: 'Taric',\n",
-       " 17: 'Teemo',\n",
-       " 412: 'Thresh',\n",
-       " 18: 'Tristana',\n",
-       " 48: 'Trundle',\n",
-       " 23: 'Tryndamere',\n",
-       " 4: 'TwistedFate',\n",
-       " 29: 'Twitch',\n",
-       " 77: 'Udyr',\n",
-       " 6: 'Urgot',\n",
-       " 110: 'Varus',\n",
-       " 67: 'Vayne',\n",
-       " 45: 'Veigar',\n",
-       " 161: 'Velkoz',\n",
-       " 254: 'Vi',\n",
-       " 234: 'Viego',\n",
-       " 112: 'Viktor',\n",
-       " 8: 'Vladimir',\n",
-       " 106: 'Volibear',\n",
-       " 19: 'Warwick',\n",
-       " 498: 'Xayah',\n",
-       " 101: 'Xerath',\n",
-       " 5: 'XinZhao',\n",
-       " 157: 'Yasuo',\n",
-       " 777: 'Yone',\n",
-       " 83: 'Yorick',\n",
-       " 350: 'Yuumi',\n",
-       " 154: 'Zac',\n",
-       " 238: 'Zed',\n",
-       " 115: 'Ziggs',\n",
-       " 26: 'Zilean',\n",
-       " 142: 'Zoe',\n",
-       " 143: 'Zyra'}"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CHAMPION_ID_TO_NAME"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
