added /topmastery and /mostplayed commands

--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "\n",
     "from src.api.summoner_v4 import Summoner_v4\n",
     "from src.api.match_v4 import Match_v4\n",
+    "from src.api.champion_mastery_v4 import Champion_mastery_v4\n",
     "\n",
     "from data_dragon import CHAMPION_NAME_TO_ID\n",
     "from data_dragon import CHAMPION_ID_TO_NAME\n",
@@ -46,19 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "API_KEY = os.getenv('API_KEY')\n",
     "mv4 = Match_v4()\n",
-    "sv4 = Summoner_v4()"
+    "sv4 = Summoner_v4()\n",
+    "cmv4 = Champion_mastery_v4()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +69,7 @@
        "1609488000.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7364,20 +7366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nasus, the xyz   #IMAGE\n",
     "# Description\n",
@@ -7386,8 +7377,172 @@
     "## .....\n",
     "# W - \n",
     "# E - \n",
-    "# R - \n"
+    "# R - \n",
+    "l = cmv4.get_full_championHistory(sv4.username_to_encryptedSummonerID('Halloween Jack'))[:10]\n",
+    "champion_str = \"\"\n",
+    "point_str = \"\"\n",
+    "mastery_str = \"\"\n",
+    "for i in l:\n",
+    "    champion_str += CHAMPION_ID_TO_NAME[i['championId']] +'\\n'\n",
+    "    point_str += str(i['championPoints']) + \" pts\\n\"\n",
+    "    mastery_str += 'Mastery '+str(i['championLevel'])+'\\n'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'discord' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-bbe3e60cef93>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0muserstats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'TaylorMade'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m420\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-31-08dc6bb46fe3>\u001b[0m in \u001b[0;36muserstats\u001b[1;34m(username, queueId)\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0musername\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msv4\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musername_to_username\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0musername\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0membed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdiscord\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEmbed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0x9932CC\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Fetching newest data...\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0membed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"https://media.tenor.com/images/2629d421692a139c37b6c43492219a45/tenor.gif\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'discord' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "userstats('TaylorMade',420)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_matches_from_db(encryptedAccountID)\n",
+    "if len(df) == 0:\n",
+    "    print('empty')\n",
+    "    #error_embed = discord.Embed(color=0x9932CC,title=f\"\" + \"Could not find current season match data for \"+username)\n",
+    "    #return\n",
+    "grouped = df.groupby(['championName']).count().sort_values('win',ascending=False)\n",
+    "if len(grouped) > 10:\n",
+    "    grouped = grouped[:10]\n",
+    "\n",
+    "top10 = grouped.index.values\n",
+    "game_counts = grouped['win'].values\n",
+    "\n",
+    "# compute statistics for each of the top 5 pairings and put together formatted string to display\n",
+    "idx = 0\n",
+    "champion_str = \"\"\n",
+    "games_played_str = \"\"\n",
+    "kda_str = \"\"\n",
+    "for i in top10:\n",
+    "    tmp = df[df['championName'] == i]\n",
+    "    champion_str += i + '\\n'\n",
+    "    numWins = sum(tmp['win'])\n",
+    "    gdf = tmp.groupby(['championName']).mean()\n",
+    "    kda_str += kda(gdf['kills'][0],gdf['deaths'][0],gdf['assists'][0]) + '\\n'\n",
+    "    games_played_str += str(len(tmp)) + \" (\"+str(numWins)+\"W \"+str(len(tmp)-numWins)+\"L) \"+\"{:.2f}% WR\".format(gdf['win'][0] * 100) + '\\n'\n",
+    "    idx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kda(kills,deaths,assists):\n",
+    "    if deaths == 0:\n",
+    "        return 'Perfect K/DA'\n",
+    "    else:\n",
+    "        return \"{:.2f}\".format((kills+assists)/deaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jhin\n",
+      "Kaisa\n",
+      "Ziggs\n",
+      "Vayne\n",
+      "Tristana\n",
+      "Caitlyn\n",
+      "Garen\n",
+      "Rammus\n",
+      "Lulu\n",
+      "Vladimir\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(champion_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "203 (120W 83L) 59.11% WR\n",
+      "86 (40W 46L) 46.51% WR\n",
+      "45 (21W 24L) 46.67% WR\n",
+      "39 (19W 20L) 48.72% WR\n",
+      "21 (10W 11L) 47.62% WR\n",
+      "15 (5W 10L) 33.33% WR\n",
+      "14 (6W 8L) 42.86% WR\n",
+      "14 (6W 8L) 42.86% WR\n",
+      "12 (5W 7L) 41.67% WR\n",
+      "8 (6W 2L) 75.00% WR\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(games_played_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.97\n",
+      "2.89\n",
+      "3.83\n",
+      "2.32\n",
+      "2.34\n",
+      "1.92\n",
+      "1.88\n",
+      "2.32\n",
+      "2.64\n",
+      "1.76\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kda_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
